--- a/static/index.css
+++ b/static/index.css
@@ -18,7 +18,7 @@ body {
 	width: 100vw;
 	min-height: 100vh;
 
-	background-color: rgb(15, 15, 15);
+	background-color: rgb(8, 8, 8);
 	color: #eee;
 }
 
@@ -83,7 +83,8 @@ body {
 	margin-bottom: 1.5vh;
 	font-size: 13px;
 }
-.desc a {
+.desc a,
+.link {
 	color: #eee;
 }
 
@@ -92,10 +93,10 @@ body {
 }
 
 .txt {
-	min-width: 350px;
+	min-width: 300px;
 }
 .etxt {
-	min-width: 300px;
+	min-width: 400px;
 }
 
 @media (max-width: 900px) {
@@ -112,5 +113,11 @@ body {
 	.content {
 		font-size: 17px;
 		padding: 15px;
+	}
+	.txt {
+		min-width: 250px;
+	}
+	.etxt {
+		min-width: 300px;
 	}
 }
